# SQLiteStorage

./: .gitignore  README.md  example.py  pip  pyproject.toml  requirements.txt
sqlitestorage/: aiostorage.py  sqlite.py  storage.py  test_storage.py
tests/: conftest.py  test_speed.py  test_states.py  test_storage.py
