[tool.poetry]
name = "sqlitestorage"
version = "0.1.0"
description = ""
authors = ["Alex <alex.blednov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^2.25.1"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
pytest-lazy-fixture = "^0.6.3"
mypy = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
