[tool.poetry]
name = "sqlitestorage"
version = "0.1.0"
description = ""
authors = ["Alex <alex.blednov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^2.25.1"
pytest = "^7.3.1"
mypy = "^1.2.0"
bson = "^0.5.10"
alt-pytest-asyncio = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
