[tool.poetry]
name = "sqlitestorage"
version = "0.1.0"
description = ""
authors = ["Alex <alex.blednov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^2.25.1"
pytest = "^7.3.1"
mypy = "^1.2.0"
bson = "^0.5.10"
alt-pytest-asyncio = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
show_error_codes = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
implicit_reexport = false
strict_equality = true
namespace_packages = true
explicit_package_bases = true
exclude = [
    'example.py'
]

[[tool.mypy.overrides]]
module = ["bson.*", "aiogram.*"]
ignore_missing_imports = true
